force-app/main/default/objects/Claim_Medicare_Items__c/Claim_Medicare_Items__c.object-meta.xml
<CustomObject>
    <label>Claim Finance Item</label>
    <nameField>
        <label>Medicare Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Finance Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>