force-app/main/default/objects/Claim_Medicare_Items__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim</label>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>Claim Finance Items</relationshipLabel>
    <relationshipName>Claim_Finance_Items</relationshipName>
    <type>Lookup</type>
</CustomField>