force-app/main/default/objects/Claim_Medicare_Items__c/fields/Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_Type__c</fullName>
    <label>Claim Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulkbill</fullName>
            </value>
            <value>
                <fullName>Patient Claim</fullName>
            </value>
            <value>
                <fullName>DVA</fullName>
            </value>
            <value>
                <fullName>Eclipse</fullName>
            </value>
            <value>
                <fullName>Medicare Exempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>