force-app/main/default/objects/Claim_Medicare_Items__c/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cycle</label>
    <referenceTo>Cycle__c</referenceTo>
    <relationshipName>Claim_Medicare_Items</relationshipName>
    <type>Lookup</type>
</CustomField>