force-app/main/default/objects/Claim_Medicare_Items__c/fields/Date_Claim_Finalised__c.field-meta.xml
<CustomField>
    <fullName>Date_Claim_Finalised__c</fullName>
    <formula>Claim__r.Finalised_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Claim Finalised</label>
    <type>Date</type>
</CustomField>