force-app/main/default/objects/Claim_Medicare_Items__c/fields/Doctor_Providing_Service__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Providing_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor Providing Service</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Doctor__c.Internal_Doctor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipName>Claim_Medicare_Items</relationshipName>
    <type>Lookup</type>
</CustomField>