force-app/main/default/objects/Claim_Medicare_Items__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Claim Finance Items</relationshipLabel>
    <relationshipName>Claim_Finance_Items</relationshipName>
    <type>Lookup</type>
</CustomField>