force-app/main/default/objects/Claim_Medicare_Items__c/fields/Item_Discription__c.field-meta.xml
<CustomField>
    <fullName>Item_Discription__c</fullName>
    <label>Item Discription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>