force-app/main/default/objects/Claim_Medicare_Items__c/fields/Linked_Referral__c.field-meta.xml
<CustomField>
    <fullName>Linked_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Referral</label>
    <referenceTo>Referral__c</referenceTo>
    <relationshipLabel>Claim Finance Items</relationshipLabel>
    <relationshipName>Claim_Finance_Items</relationshipName>
    <type>Lookup</type>
</CustomField>