force-app/main/default/objects/Claim_Medicare_Items__c/fields/Referring_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Referring_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipName>Claim_Medicare_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>