force-app/main/default/objects/Claim_Medicare_Items__c/fields/Year_DOS__c.field-meta.xml
<CustomField>
    <fullName>Year_DOS__c</fullName>
    <formula>YEAR( Date_of_Service__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year (DOS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>